[package]
name = "get_jokes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.19", features = ["full"] }
dotenv = { version = "0.15", features = [] }
json = { version = "0.12", features = [] }
